--- a/styles/style.css
+++ b/styles/style.css
@@ -154,12 +154,12 @@
     grid-template-columns: repeat(1,1fr);
     grid-row-gap: 20px;
 }
-/* .footer-section{
-    margin-top: 162px;
-    margin-bottom: 59px;
+.footer-section{
+    /* margin-top: 162px; */
+    /* margin-bottom: 59px; */
     margin-left: 437px;
     margin-right: 519px;
-} */
+}
 .footer-logo{
     display: flex;
     flex-direction: column;
@@ -167,6 +167,9 @@
 }
 .footer-image{
     width: 483px;
+}
+.footer-image img{
+    width: 100%;
 }
 .footer-icon.fab{
     width: 17px;
@@ -176,13 +179,24 @@
 }
 /* media query for phone */
 @media only screen and (max-width:668px) {
-    .top-banner{
+    .container{
         width: 100%;
     }
-    .players,.top-banner,.footer-logo{
+    .players,.footer-section{
         grid-template-columns: repeat(1,1fr);
     }
-    .player{
+    .player,.club-section{
         flex-direction: column;
     }
+}
+/* media query for ipad */
+@media only screen and (min-width:688px) and (max-width:992px)  {
+
+    .players,.footer-section{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .top-banner{
+        grid-template-columns: repeat(1,1fr);
+    }
+
 }
