--- a/styles/style.css
+++ b/styles/style.css
@@ -178,10 +178,19 @@
     color: #000000;
 }
 /* media query for phone */
-@media only screen and (max-width:668px) {
+@media only screen and (max-width:688px) {
     .container{
         display: flex;
         align-items: center;
+        justify-content: center;
+        width: 600px;
+    }
+    .top-banner{
+        text-align: center;
+    }
+ 
+    .banner-image{
+ 
         width: 100%;
     }
     .footer-section{
